# Placement_Impossible-AssetFlow

./: IMPLEMENTATION_PLAN.md  README.md  render.yaml
backend/: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  api.py  models.py  schemas.py  services.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_employee_access_status_employee_requested_role.py
backend/apps/activity/: admin.py  api.py  models.py  schemas.py  services.py
backend/apps/activity/migrations/: 0001_initial.py
backend/apps/allocation/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
backend/apps/allocation/migrations/: 0001_initial.py
backend/apps/assets/: admin.py  api.py  models.py  schemas.py  services.py
backend/apps/assets/migrations/: 0001_initial.py  0002_db_constraints.py
backend/apps/audits/: admin.py  api.py  models.py  schemas.py  services.py
backend/apps/audits/migrations/: 0001_initial.py
backend/apps/booking/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
backend/apps/booking/migrations/: 0001_initial.py
backend/apps/maintenance/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
backend/apps/organization/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
backend/config/: api.py  settings.py  urls.py
backend/core/: auth.py  enums.py  exceptions.py  onboarding.py  permissions.py  schemas.py
backend/core/management/commands/: seed_demo.py  (+1 more)
backend/core/services/: activity.py  notify.py
backend/db/: schema.sql
(+83 files in other folders)
